<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Binance Alert</string>

    <string name="binance_api_key">77Pz3JMAL1MNDX4PHOZGm0I8odHHE42eYe5QlCPhZpqiIrtaiusi3WucLvxLswdD</string>
    <string name="binance_secret_key">DP37qpasv97TyOKkxfuMAnHrDeEFBebjjJsyitlLiEJR5gt6w0cFCNp3n7mTONz6</string>
    <string name="http_header">X-MBX-APIKEY</string>

    <string name="title_recent_trade">Recent Trades</string>
    <string name="title_prices">Prices</string>
    <string name="label_select_a_trading_pair">Select a trading pair</string>
    <string name="price">PRICE</string>
    <string name="quantity">Quantity</string>
    <string name="price_qty">QUANTITY/PRICE</string>
    <string name="time">TIME</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="no_internet">No internet connection</string>
    <string name="no_data_found">No data found</string>
    <string name="network_busy">Network busy. Please try again!</string>
    <string name="maker_commission">Maker commission:</string>
    <string name="taker_commission">Taker commission:</string>
    <string name="buyer_commission">Buyer commission:</string>
    <string name="seller_commission">Seller commission:</string>
    <string name="can_trade">Can trade:</string>
    <string name="can_deposit_withdraw">Can deposit/withdraw:</string>
    <string name="can_deposit">Can deposit:</string>
    <string name="can_withdraw">Can withdraw:</string>
    <string name="asset">Asset</string>
    <string name="free_amount">Free Amount</string>
    <string name="locked_amount">Locked Amount</string>
    <string name="combined_amount">Free/Locked</string>
    <string name="total_amount">Total</string>
    <string name="is_buyer">Buyer</string>
    <string name="is_maker">Maker</string>
    <string name="quantity_and_time">Quantity/Time</string>
    <string name="coin">COIN</string>
    <string name="account_summary">Account Summary</string>
    <string name="order_summary_name">Name: <xliff:g example="Amy" id="name">%s</xliff:g></string>
    <string name="my_balances">My Balances</string>
    <string name="search">search</string>
    <string name="featured_currencies">Featured currencies</string>
    <string name="top_currencies">Top currencies</string>
    <string name="base_currency">Base currency:</string>
    <string name="id">#</string>
    <string name="percent_change">% CHANGE</string>
    <string name="load_more">LOAD MORE</string>
    <string name="dollar">$</string>
    <string name="all_time">ALL</string>
    <string name="title_price_alert">Alert</string>
    <string name="condition">CONDITION</string>
    <string name="action">ACTIONS</string>
    <string name="price_check_service">Coin Check Service</string>
    <string name="coin_xrp_ada_bnb">Coin (XRP, ADA, BNB…)</string>
    <string name="targeted_price">Targeted Price (123.321…)</string>
    <string name="targeted_price_field">Targeted Price</string>
    <string name="interval_field">Interval</string>
    <string name="choose_a_coin">COIN: </string>
    <string name="pick_a_condition">When</string>
    <string name="pick_a_unit">UNIT: </string>
    <string name="larger_than">Larger than</string>
    <string name="less_than">Less than</string>
    <string name="alert_setting">alert me</string>
    <string name="alert_repeat">REPEAT: </string>
    <string name="interval">INTERVAL:</string>
    <string name="mins">minutes</string>
    <string name="persistent">Persistent</string>
    <string name="one_time">One-time</string>
    <string name="sound">Sound</string>
    <string name="vibrate">Vibrate</string>
    <string name="led">Led</string>
    <string name="add">Add</string>
    <string name="usdt">USDT</string>
    <string name="btc">BTC</string>
    <string name="eth">ETH</string>
    <string name="bnb">BNB</string>
    <string name="toast_text_empty">is empty</string>
    <string name="toast_zero_value">must not be 0</string>
    <string name="done">DONE</string>
    <string name="edit_alert">Edit Alert</string>
    <string name="new_alert">New Alert</string>
    <string name="choose_condition">CONDITION:</string>
    <string name="alert_type">ALERT TYPE:</string>
    <string name="chart_no_data_text">Loading chart data…</string>
    <string name="vol_label">Vol:</string>
    <string name="action_cancel">Cancel</string>

</resources>
